修改同步笔记

--- a/同步.md
+++ b/同步.md
@@ -1,3 +1,4 @@
+一下笔记来自 《Redis设计与实现》—黄健宏
 #### 简介
 在Redis中，用户可以通过执行SLAVEOF命令或者设置slaveof选项，让一个服务器去复制（replicate）另一个服务器，我们称呼被复制的服务器为主服务器（master），而对主服务器进行复制的服务器则被称为从服务器（slave)
 Redis的复制功能分为 **同步（sync）** 和 **命令传播(command propagate)** 两个操作：
@@ -12,6 +13,8 @@ Redis的复制功能分为 **同步（sync）** 和 **命令传播(command propa
 * 主服务器收到SYNC命令，执行BGSAVE命令，在后台生成一个RDB文件，并使用一个缓冲区记录从现在开始执行的所有写命令
 * 当主服务器的BGSAVE命令执行完毕时，主服务器会将BGSAVE命令生成的RDB文件发送给从服务器，从服务器接收并载入这个RDB文件，将自己的数据库状态更新至主服务器执行BGSAVE命令时的数据库状态
 * 主服务器将记录在缓冲区的所有写命令发送给从服务器，从服务器执行这些写命令，将自己的数据库状态更新至主服务器数据库当前所处的状态
+
+注意：从Redis 2.8.18版本开始，Redis支持无盘复制：主服务器直接通过套接字将快照内容发送到从节点。生成快照是一个遍历的过程，主节点会一边遍历一边将序列化的内容发送到从节点。从节点还是和以前一样：先将接收到的内容存储到磁盘文件中，再进行一次性加载。       ——《Redis深度历险》——钱文品
 ##### 命令传播
 在同步操作执行完毕之后，主从服务器数据库将达到一致状态，当主服务器执行客户端写命令时，主服务器的数据库就有可能会被修改，导致主从服务器状态不再一致。为了让主从服务器再次回到一致状态，主服务器需要对从服务器执行命令传播操作：主服务器会将自己执行的写命令，也即是造成主从服务器不一致的那条写命令，发送给从服务器执行，当从服务器执行了相同的写命令之后，主从服务器将再次回到一致状态。
 ##### 缺陷
