--- a/同步.md
+++ b/同步.md
@@ -1,4 +1,4 @@
-一下笔记来自 《Redis设计与实现》—黄健宏
+以下笔记来自 《Redis设计与实现》—黄健宏
 #### 简介
 在Redis中，用户可以通过执行SLAVEOF命令或者设置slaveof选项，让一个服务器去复制（replicate）另一个服务器，我们称呼被复制的服务器为主服务器（master），而对主服务器进行复制的服务器则被称为从服务器（slave)
 Redis的复制功能分为 **同步（sync）** 和 **命令传播(command propagate)** 两个操作：
